# weatherBot

./: .gitignore  README.md  db_utils.py  keep_alive.py  main.py  pyproject.toml  requirements.in  requirements.txt
cogs/: sampleResponse.json  settings.py  weather.py
